Improve quote handling to make language .ini files valid (#3089)

--- a/languages/CreatorRoles/es.ini
+++ b/languages/CreatorRoles/es.ini
@@ -214,7 +214,7 @@ mus = "Músico"
 mutmassl Verf = "Autor putativo"
 mutmassl VerfKomp = "autor / compositor putativo "
 mutmaßl hrsg = "Editor putativo"
-Mutmaßl Verf = "Putative author" Autor putativo"
+Mutmaßl Verf = "Autor putativo"
 mutmaßl verf = "Autor putativo"
 mutmaßl übers = "Traductor putativo"
 Nachr = "Autor del epílogo, colofón, etc."
