--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -63,7 +63,7 @@ All Fields = "Kaikki kentät"
 All Pages Loaded = "Kaikki sivut ladattu"
 All Text = "Kaikki teksti"
 alphabrowse_matches = "Tulokset"
-alphabrowselink_html = "Selaa %%index%%-indeksiä alkaen kohdasta <a href="%%url%%">%%from%%</a>."
+alphabrowselink_html = 'Selaa %%index%%-indeksiä alkaen kohdasta <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Kysy aina"
 An error has occurred = "Tapahtui virhe"
 An error occurred during execution; please try again later. = "Virhe toimintoa suoritettaessa. Yritä myöhemmin uudelleen."
@@ -84,7 +84,7 @@ authentication_error_admin = "Sisäänkirjautuminen epäonnistui. Ota yhteyttä 
 authentication_error_blank = "Käyttäjätunnus/salasana ei voi olla tyhjä."
 authentication_error_creation_blocked = "Sinulla ei ole oikeutta luoda käyttäjätiliä."
 authentication_error_denied = "Käyttäjätiedot eivät täsmää. Ei pääsyä järjestelmään."
-authentication_error_email_not_verified_html = "Sähköpostiosoitettasi ei ole vielä vahvistettu. Tarkista myös roskapostikansio siltä varalta, että varmistusviesti on mennyt sinne. Tarvittaessa voit <a href="%%url%%">pyytää uuden vahvistusviestin</a>."
+authentication_error_email_not_verified_html = 'Sähköpostiosoitettasi ei ole vielä vahvistettu. Tarkista myös roskapostikansio siltä varalta, että varmistusviesti on mennyt sinne. Tarvittaessa voit <a href="%%url%%">pyytää uuden vahvistusviestin</a>.'
 authentication_error_expired = "Kirjautumispyyntö on vanhentunut."
 authentication_error_in_progress = "Kirjautuminen on jo käynnissä. Yritä myöhemmin uudelleen, jos haluat aloittaa alusta."
 authentication_error_invalid = "Käyttäjätunnus/salasana ei täsmää. Yritä uudestaan."
@@ -334,7 +334,7 @@ Displaying the top = "Näytetään ensimmäiset"
 Document Inspector = "Dokumentin tutkija"
 Document Type = "Dokumentin tyyppi"
 DOI = "DOI"
-doi_detected_html = "Hakusi näyttää sisältävän DOI-tunnisteen. Klikkaa tästä tarkistaaksesi saatavuuden: <a href="%%url%%">%%doi%%</a>"
+doi_detected_html = 'Hakusi näyttää sisältävän DOI-tunnisteen. Klikkaa tästä tarkistaaksesi saatavuuden: <a href="%%url%%">%%doi%%</a>'
 Draw Search Box = "Valitse alue"
 draw_searchbox_end = "Lopeta raahaaminen, kun valinta on valmis."
 draw_searchbox_start = "Klikkaa ja raahaa valitaksesi alueen."
@@ -373,7 +373,7 @@ Email address is invalid = "Sähköpostiosoite on virheellinen"
 Email Record = "Lähetä tietue sähköpostilla"
 Email this = "Lähetä sähköpostilla"
 Email this Search = "Lähetä haku sähköpostilla"
-email_change_pending_html = "Sähköpostiosoitteen vaihto osoitteeseen %%pending%% odottaa vahvistusta. Klikkaa viestin linkkiä vahvistaaksesi uuden osoitteen. Tarvittaessa voimme <a href="%%url%%">lähettää vahvistusviestin uudelleen</a>."
+email_change_pending_html = 'Sähköpostiosoitteen vaihto osoitteeseen %%pending%% odottaa vahvistusta. Klikkaa viestin linkkiä vahvistaaksesi uuden osoitteen. Tarvittaessa voimme <a href="%%url%%">lähettää vahvistusviestin uudelleen</a>.'
 email_failure = "Virhe - viestiä ei voitu lähettää"
 email_link = "Linkki"
 email_login_desc = "Käytä seuraavaa linkkiä kirjautuaksesi sisään. Jos et ole kirjautumassa sisään, voit huoletta jättää tämän viestin huomiotta. Huomaa, että linkki on voimassa rajoitetun ajan ja toimii vain laitteessa, jossa annoit sähköpostiosoitteesi."
@@ -545,7 +545,7 @@ history_delete = "Poista"
 history_delete_link = "Poista"
 history_empty_search = "Mitä tahansa (ei hakuehtoja)"
 history_limits = "Rajaukset"
-history_login_html = "<a href="%%url%%">Kirjaudu sisään</a> nähdäksesi tallennetut haut."
+history_login_html = '<a href="%%url%%">Kirjaudu sisään</a> nähdäksesi tallennetut haut.'
 history_no_saved_searches = "Sinulla ei ole yhtään tallennettua hakua."
 history_no_searches = "Hakuhistoria on tyhjä."
 history_purge = "Tyhjennä viimeisimmät haut historiasta"
@@ -599,8 +599,8 @@ hold_items_available = "Varaaminen ei ole mahdollista, koska niteitä on saatavi
 hold_login = "Kirjaudu sisään tehdäksesi varauspyynnön"
 hold_place = "Tee varaus"
 hold_place_fail_missing = "Pyyntö epäonnistui puuttuvien tietojen vuoksi. Ota yhteyttä kirjaston asiakaspalveluun."
-hold_place_success_html = "Varauspyyntö onnistui. <a href="%%url%%">Varaukset</a>."
-hold_profile_html = "Kirjaudu <a href="%%url%%">kirjastokortilla</a> nähdäksesi varaukset."
+hold_place_success_html = 'Varauspyyntö onnistui. <a href="%%url%%">Varaukset</a>.'
+hold_profile_html = 'Kirjaudu <a href="%%url%%">kirjastokortilla</a> nähdäksesi varaukset.'
 hold_proxied_by = "Varauksen tekijä"
 hold_proxied_for = "Välitetään käyttäjälle"
 hold_queue_position = "Sijainti jonossa"
@@ -647,10 +647,10 @@ ill_request_pick_up_library = "Noutokirjasto"
 ill_request_pick_up_location = "Noutopaikka"
 ill_request_place_fail_missing = "Tilaus epäonnistui puuttuvien tietojen vuoksi. Ota yhteyttä kirjaston asiakaspalveluun."
 ill_request_place_success = "Kaukolainatilaus onnistui"
-ill_request_place_success_html = "Kaukolainatilaus onnistui. <a href="%%url%%">Kaukolainatilaukset</a>."
+ill_request_place_success_html = 'Kaukolainatilaus onnistui. <a href="%%url%%">Kaukolainatilaukset</a>.'
 ill_request_place_text = "Tee kaukolainatilaus"
 ill_request_processed = "Käsitelty"
-ill_request_profile_html = "Kirjaudu <a href="%%url%%">kirjastokortilla</a> nähdäksesi kaukolainatilaukset."
+ill_request_profile_html = 'Kirjaudu <a href="%%url%%">kirjastokortilla</a> nähdäksesi kaukolainatilaukset.'
 ill_request_submit_text = "Tee kaukolainatilaus"
 Illustrated = "Kuvitus"
 ils_account_create_error = "Tiliä ei voitu luoda kirjastojärjestelmään. Jos ongelma jatkuu, ota yhteyttä kirjastoon."
@@ -806,7 +806,7 @@ My Holds = "Varaukset"
 My Profile = "Omat tiedot"
 Narrow Search = "Rajaa hakua"
 navigate_back = "Takaisin"
-nearby_items = "Tulokset lähellä: "%%title%%""
+nearby_items = 'Tulokset lähellä: "%%title%%"'
 New Item Feed = "Syöte uutuuksista"
 New Item Search = "Uutuushaku"
 New Item Search Results = "Uutuushaun tulokset"
@@ -837,7 +837,7 @@ no_email_address = "Sähköpostiosoite puuttuu."
 no_items_selected = "Ei tietueita valittuna"
 no_proxied_user = "Ei välitystä (varaus omaan käyttöön)"
 nohit_active_filters = "Tässä haussa on käytetty suodattimia. Poistamalla suodattimet voit saada enemmän tuloksia."
-nohit_change_tab = "Haku tehtiin välilehdellä "%%activeTab%%". Voit löytää jotain muilta välilehdiltä:"
+nohit_change_tab = 'Haku tehtiin välilehdellä "%%activeTab%%". Voit löytää jotain muilta välilehdiltä:'
 nohit_filters = "Tässä haussa käytetyt suodattimet:"
 nohit_heading = "Ei tuloksia!"
 nohit_lookfor_html = "Haulla - <strong>%%lookfor%%</strong> - ei löytynyt tuloksia."
@@ -938,7 +938,7 @@ od_info_unavail = "Tätä tietoa ei ole juuri nyt saatavissa."
 od_is_checkedout = "Sinulla on tämä teos lainassa.  Sen eräpäivä on %%due_date%%."
 od_is_on_hold = "Sinulla on tämä teos lainassa."
 od_loans = "Overdrive-lainat"
-od_mycontent_help = "Saadaksesi tietoa näiden teosten lataamisesta ja käyttämisestä, katso <a href="%%url%%">Overdrive Help</a>."
+od_mycontent_help = 'Saadaksesi tietoa näiden teosten lataamisesta ja käyttämisestä, katso <a href="%%url%%">Overdrive Help</a>.'
 od_none_found = "Ei löytyneitä teoksia."
 od_return_failure = "Teosta ei voitu palauttaa."
 od_return_success = "Teos on palautettu."
@@ -1033,7 +1033,7 @@ profile_update = "Käyttäjäprofiilisi on päivitetty."
 pronounced = "äännetään"
 Provider = "Tuottaja"
 proxied_user = "Välitä varaus käyttäjälle"
-proxy_hold_place_success_html = "Välitetty varaus onnistui. <a href="%%url%%">Varaukset</a>."
+proxy_hold_place_success_html = 'Välitetty varaus onnistui. <a href="%%url%%">Varaukset</a>.'
 Public = "Julkinen"
 public_list_indicator = "julkinen lista"
 Publication = "Julkaisu"
@@ -1103,7 +1103,7 @@ Refine Results = "Tarkenna hakua"
 Region = "Alue"
 relais_available = "Aineisto on saatavissa kaukolainana. Haluatko tehdä kaukolainapyynnön?"
 relais_checking = "Tarkistetaan saatavuutta..."
-relais_error_html = "Pyyntö epäonnistui. Tee pyyntö <a href="%%url%%" target='new'>kaukolainauspalvelun sivuilla.</a>"
+relais_error_html = 'Pyyntö epäonnistui. Tee pyyntö <a href="%%url%%" target="new">kaukolainauspalvelun sivuilla.</a>'
 relais_request = "Kaukopalvelupyyntö"
 relais_requesting = "Pyyntöä lähetetään..."
 relais_search = "Kaukopalveluhaku"
@@ -1276,10 +1276,10 @@ storage_retrieval_request_invalid_pickup = "Valittu noutopaikka on virheellinen.
 storage_retrieval_request_issue = "Päiväys"
 storage_retrieval_request_place_fail_missing = "Tilaus epäonnistui puuttuvien tietojen vuoksi. Ota yhteyttä kirjaston asiakaspalveluun."
 storage_retrieval_request_place_success = "Varastotilaus onnistui"
-storage_retrieval_request_place_success_html = "Varastotilaus onnistui. <a href="%%url%%">Varastotilaukset</a>."
+storage_retrieval_request_place_success_html = 'Varastotilaus onnistui. <a href="%%url%%">Varastotilaukset</a>.'
 storage_retrieval_request_place_text = "Tee varastotilaus"
 storage_retrieval_request_processed = "Käsitelty"
-storage_retrieval_request_profile_html = "Kirjaudu <a href="%%url%%">kirjastokortilla</a> nähdäksesi varastotilaukset."
+storage_retrieval_request_profile_html = 'Kirjaudu <a href="%%url%%">kirjastokortilla</a> nähdäksesi varastotilaukset.'
 storage_retrieval_request_reference = "Viitetiedot"
 storage_retrieval_request_selected_item = "Valittu nide"
 storage_retrieval_request_submit_text = "Tee tilaus"
@@ -1356,7 +1356,7 @@ total_saved_items = "Tallennettuja tietueita yhteensä"
 total_tags = "Tageja yhteensä"
 total_users = "Käyttäjiä yhteensä"
 Transliterated Title = "Translitteroitu nimeke"
-tree_search_limit_reached_html = "Hakusi tuotti liikaa tuloksia puussa näytettäväksi. Näytetään vain ensimmäiset <b>%%limit%%</b> kohdetta. Klikkaa <a id="fullSearchLink" href="%%url%%" target="_blank">tästä</a> nähdäksesi koko hakutuloksen."
+tree_search_limit_reached_html = 'Hakusi tuotti liikaa tuloksia puussa näytettäväksi. Näytetään vain ensimmäiset <b>%%limit%%</b> kohdetta. Klikkaa <a id="fullSearchLink" href="%%url%%" target="_blank">tästä</a> nähdäksesi koko hakutuloksen.'
 trending_items_channel_title = "Nousussa"
 unique_tags = "Yksilöllisiä tageja yhteensä"
 University Library = "Yliopiston kirjasto"
