--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -63,7 +63,7 @@ All Fields = "Vše"
 All Pages Loaded = "Všechny stránky nahrány"
 All Text = "Vše"
 alphabrowse_matches = "Výsledky"
-alphabrowselink_html = "Procházet záznamy podle %%index%% od <a href="%%url%%">%%from%%</a>."
+alphabrowselink_html = 'Procházet záznamy podle %%index%% od <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Pokaždé se zeptat"
 An error has occurred = "Došlo k chybě"
 An error occurred during execution; please try again later. = "Vyskytla se chyba, zkuste to znovu později."
@@ -84,7 +84,7 @@ authentication_error_admin = "Při přihlášení došlo k chybě. Kontaktujte s
 authentication_error_blank = "Vyplňte uživatelské jméno"
 authentication_error_creation_blocked = "Nemáte oprávnění pro vytvoření účtu."
 authentication_error_denied = "Přístup odmítnut"
-authentication_error_email_not_verified_html = "Vaše e-mailová adresa doposud nebyla ověřena. Zkontrolujte také složku se spamem. Pokud je to nutné, můžeme Vám ověřovací zprávu <a href="%%url%%">zaslat znovu.</a>."
+authentication_error_email_not_verified_html = 'Vaše e-mailová adresa doposud nebyla ověřena. Zkontrolujte také složku se spamem. Pokud je to nutné, můžeme Vám ověřovací zprávu <a href="%%url%%">zaslat znovu.</a>.'
 authentication_error_expired = "Vypršel časový limit pro ověření požadavku."
 authentication_error_in_progress = "Proces ověření právě probíhá. Pokud chcete začít znovu, zkuste to později."
 authentication_error_invalid = "Neplatné jméno či heslo"
@@ -333,7 +333,7 @@ Displaying the top = "Zobrazuji nejrelevantnější výsledky"
 Document Inspector = "Inspekce dokumentu"
 Document Type = "Druh dokumentu"
 DOI = "DOI"
-doi_detected_html = "Zdá se, že Váš vyhledávací dotaz obsahuje DOI. Pokud chcete ověřit dostupnost odpovídajícího digitálního dokumentu, klikněte zde: <a href="%%url%%">%%doi%%</a>"
+doi_detected_html = 'Zdá se, že Váš vyhledávací dotaz obsahuje DOI. Pokud chcete ověřit dostupnost odpovídajícího digitálního dokumentu, klikněte zde: <a href="%%url%%">%%doi%%</a>'
 Draw Search Box = "Označit vyhledávané území"
 draw_searchbox_end = "Pusťte tlačítko myši pro dokončení."
 draw_searchbox_start = "Klikněte a táhněte pro označení oblasti"
@@ -372,7 +372,7 @@ Email address is invalid = "E-mailová adresa není platná"
 Email Record = "Zaslat záznam e-mailem"
 Email this = "Poslat e-mailem"
 Email this Search = "Poslat e-mailem"
-email_change_pending_html = "Požádali jste o změnu e-mailové adresy na %%pending%%. Pro potvrzení změny klikněte na odkaz, který jsme odeslali na tuto adresu odeslali. Je-li to nutné, můžeme si nechat potvrzovací e-mail <a href="%%url%%">poslat znovu</a>."
+email_change_pending_html = 'Požádali jste o změnu e-mailové adresy na %%pending%%. Pro potvrzení změny klikněte na odkaz, který jsme odeslali na tuto adresu odeslali. Je-li to nutné, můžeme si nechat potvrzovací e-mail <a href="%%url%%">poslat znovu</a>.'
 email_failure = "Chyba při odesílání e-mailu"
 email_link = "Odkaz"
 email_login_desc = "Pro přihlášení použijte následující odkaz. Pokud se nechcete přihlásit, můžete tuto zprávu ignorovat. Upozornění: následují odkaz je platný pouze po omezený čas a pouze pro zařízení, z kterého jste zahájili přihlašování."
@@ -544,7 +544,7 @@ history_delete = "Akce"
 history_delete_link = "Odstranit"
 history_empty_search = "Cokoli (prázdný vyhledávací dotaz)"
 history_limits = "Použité filtry"
-history_login_html = "Pro zobrazení uložených hledání je třeba se <a href="%%url%%">přihlásit</a>."
+history_login_html = 'Pro zobrazení uložených hledání je třeba se <a href="%%url%%">přihlásit</a>.'
 history_no_saved_searches = "Nemáte žádná uložená hledání."
 history_no_searches = "Přehled Vašich vyhledávání je prázdný."
 history_purge = "Odstranit neuložená vyhledávání"
@@ -598,8 +598,8 @@ hold_items_available = "Nelze vytvořit požadavek na dokument, který je k disp
 hold_login = "Přihlaste se"
 hold_place = "Zadat požadavek"
 hold_place_fail_missing = "Váš požadavek selhal. Chybí některé údaje. Kontaktujte pracovníky knihovny pro další informace."
-hold_place_success_html = "Váš požadavek byl úspěšně vložen. <a href="%%url%%">Vaše rezervace a objednávky</a>."
-hold_profile_html = "Pro informace o rezervacích a objednávkách musíte mít vytvořený <a href="%%url%%">účet v katalogu</a>."
+hold_place_success_html = 'Váš požadavek byl úspěšně vložen. <a href="%%url%%">Vaše rezervace a objednávky</a>.'
+hold_profile_html = 'Pro informace o rezervacích a objednávkách musíte mít vytvořený <a href="%%url%%">účet v katalogu</a>.'
 hold_proxied_by = "Rezervaci vytvořil"
 hold_proxied_for = "Rezervace je určena pro"
 hold_queue_position = "Vaše pořadí ve frontě"
@@ -646,10 +646,10 @@ ill_request_pick_up_library = "Vyzvednout v knihovně"
 ill_request_pick_up_location = "Vyzvednout na oddělení"
 ill_request_place_fail_missing = "Váš požadavek selhal. Chybí některé údaje. Pro další informace kontaktujte pracovníky knihovny."
 ill_request_place_success = "Váš požadavek byl úspěšně vložen."
-ill_request_place_success_html = "Váš požadavek byl úspěšně vložen. <a href="%%url%%">Požadavky na meziknihovní výpůjčky</a>."
+ill_request_place_success_html = 'Váš požadavek byl úspěšně vložen. <a href="%%url%%">Požadavky na meziknihovní výpůjčky</a>.'
 ill_request_place_text = "Objednat MVS"
 ill_request_processed = "Zpracováno"
-ill_request_profile_html = "Pro informace o meziknihovních výpůjčkách je nutné mít <a href="%%url%%">účet v knihovně</a>."
+ill_request_profile_html = 'Pro informace o meziknihovních výpůjčkách je nutné mít <a href="%%url%%">účet v knihovně</a>.'
 ill_request_submit_text = "Objednat MVS"
 Illustrated = "Ilustrováno"
 ils_account_create_error = "Nepodařilo se vytvořit Váš účet v knihovním systému. Pokud problém přetrvává, kontaktujte knihovnu."
@@ -799,7 +799,7 @@ My Holds = "Rezervace"
 My Profile = "Profil"
 Narrow Search = "Upřesnit hledání"
 navigate_back = "Zpět"
-nearby_items = "Items Near "%%title%%""
+nearby_items = 'Items Near "%%title%%"'
 New Item Feed = "Nové tituly v katalogu"
 New Item Search = "Hledání v novinkách"
 New Item Search Results = "Výsledky vyhledávání v novinkách"
@@ -830,7 +830,7 @@ no_email_address = "Chybí e-mailová adresa."
 no_items_selected = "Nic nebylo vybráno"
 no_proxied_user = "Žádný uživatel (vyžádejte si pro sebe)"
 nohit_active_filters = "Použili jste funkci upřesnění výsledků. Pokud tato upřesnění odstraníte, můžete získat více výsledků."
-nohit_change_tab = "Hledali jste v sekci "%%activeTab%%". Zkuste také další sekce, třeba budete úspěšní tam:"
+nohit_change_tab = 'Hledali jste v sekci "%%activeTab%%". Zkuste také další sekce, třeba budete úspěšní tam:'
 nohit_filters = "Filtry použité pro toto hledání:"
 nohit_heading = "Žádné výsledky!"
 nohit_lookfor_html = "Pro Váš dotaz - <strong>%%lookfor%%</strong> - nebyl nalezen žádný výsledek."
@@ -931,7 +931,7 @@ od_info_unavail = "Tato informace není právě dostupná."
 od_is_checkedout = "Tento titul již máte vypůjčený do %%due_date%%."
 od_is_on_hold = "Tento titul již máte rezervovaný."
 od_loans = "Výpůjčky v systému Overdrive"
-od_mycontent_help = "Více informací o stahování těchto titulů si naleznete v <a href="%%url%%">nápovědě systému OverDrive</a>."
+od_mycontent_help = 'Více informací o stahování těchto titulů si naleznete v <a href="%%url%%">nápovědě systému OverDrive</a>.'
 od_none_found = "Nebyly nalezeny žádné tituly."
 od_return_failure = "Výpůjčku se nepodařilo vrátit."
 od_return_success = "Výpůjčka byla vrácena."
@@ -1026,7 +1026,7 @@ profile_update = "Profil byl upraven podle Vašeho požadavku"
 pronounced = "výslovnost:"
 Provider = "Poskytovatel"
 proxied_user = "Požadavek předat uživateli"
-proxy_hold_place_success_html = "Požadavek na předání rezervace byl úspěšný. <a href="%%url%%">Vaše rezervace a objednávky</a>."
+proxy_hold_place_success_html = 'Požadavek na předání rezervace byl úspěšný. <a href="%%url%%">Vaše rezervace a objednávky</a>.'
 Public = "Veřejný"
 public_list_indicator = "Veřejný"
 Publication = "Publikace"
@@ -1096,7 +1096,7 @@ Refine Results = "Upřesnit hledání"
 Region = "Oblast"
 relais_available = "Tento dokument je dostupný v rámci meziknihovní výpůjční služby. Chcete jej objednat?"
 relais_checking = "Zjišťuji dostupnost..."
-relais_error_html = "Při zpracování požadavku se vyskytla chyba. Klikněte <a href="%%url%%" target='new'>zde</a> pro objednání dokumentu na stránkách systému pro meziknihovní výpůjčky."
+relais_error_html = 'Při zpracování požadavku se vyskytla chyba. Klikněte <a href="%%url%%" target="new">zde</a> pro objednání dokumentu na stránkách systému pro meziknihovní výpůjčky.'
 relais_request = "Objednávka meziknihovní výpůjčky"
 relais_requesting = "Objednávám..."
 relais_search = "Hledat v meziknihovních výpůjčkách"
@@ -1270,10 +1270,10 @@ storage_retrieval_request_invalid_pickup = "Neplatné místo vyzvednutí. Zkuste
 storage_retrieval_request_issue = "Datum"
 storage_retrieval_request_place_fail_missing = "Váš požadavek selhal. Chybí některé údaje. Kontaktujte pracovníky knihovny pro další informace."
 storage_retrieval_request_place_success = "Váš požadavek byl úspěšný"
-storage_retrieval_request_place_success_html = "Váš požadavek byl úspěšně vložen. <a href="%%url%%">Požadavky na vyzvednutí ze skladu</a>."
+storage_retrieval_request_place_success_html = 'Váš požadavek byl úspěšně vložen. <a href="%%url%%">Požadavky na vyzvednutí ze skladu</a>.'
 storage_retrieval_request_place_text = "Zadat požadavek na vyzvednutí ze skladu"
 storage_retrieval_request_processed = "Zpracováno"
-storage_retrieval_request_profile_html = "Informace o Vašich požadavcích na vyzvednutí ze skladu najdete ve svém <a href="%%url%%">čtenářském kontu</a>."
+storage_retrieval_request_profile_html = 'Informace o Vašich požadavcích na vyzvednutí ze skladu najdete ve svém <a href="%%url%%">čtenářském kontu</a>.'
 storage_retrieval_request_reference = "Titul"
 storage_retrieval_request_selected_item = "Vybrané jednotky"
 storage_retrieval_request_submit_text = "Zadat požadavek"
@@ -1349,7 +1349,7 @@ total_saved_items = "Celkem uložených položek"
 total_tags = "Celkem tagů"
 total_users = "Celkem uživatelů"
 Transliterated Title = "Transliterovaný název"
-tree_search_limit_reached_html = "Na Váš dotaz bylo nalezeno příliš mnoho výsledků, proto je nebylo možné všechny zobrazit ve stromové struktuře. Bylo zobrazeno pouze prvních <b>%%limit%%</b> položek. Pro zobrazení všech výsledků klikněte <a id="fullSearchLink" href="%%url%%" target="_blank">zde.</a>"
+tree_search_limit_reached_html = 'Na Váš dotaz bylo nalezeno příliš mnoho výsledků, proto je nebylo možné všechny zobrazit ve stromové struktuře. Bylo zobrazeno pouze prvních <b>%%limit%%</b> položek. Pro zobrazení všech výsledků klikněte <a id="fullSearchLink" href="%%url%%" target="_blank">zde.</a>'
 trending_items_channel_title = "O co je teď zájem"
 unique_tags = "Unikátní tagy"
 University Library = "Univerzitní knihovna"
