--- a/languages/hr.ini
+++ b/languages/hr.ini
@@ -65,7 +65,7 @@ All Fields = "Sva polja"
 All Pages Loaded = "Sve stranice učitane"
 All Text = "Sav tekst"
 alphabrowse_matches = "Rezultati"
-alphabrowselink_html = "Pregledaj unose prema %%index%%, počevši od <a href="%%url%%">%%from%%</a>."
+alphabrowselink_html = 'Pregledaj unose prema %%index%%, počevši od <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Uvijek me pitaj"
 An error has occurred = "Došlo je do greške"
 An error occurred during execution; please try again later. = "Tijekom izvršavanja je došlo do greške; pokušaj kasnije ponovo."
@@ -86,7 +86,7 @@ authentication_error_admin = "U ovom trenutku te ne možemo prijaviti. Kontaktir
 authentication_error_blank = "Informacije za prijavu ne smiju biti prazne."
 authentication_error_creation_blocked = "Nije ti dozvoljeno stvoriti račun."
 authentication_error_denied = "Vjerodajnice se ne poklapaju! Pristup zabranjen."
-authentication_error_email_not_verified_html = "Tvoja e-adresa još nije potvrđena. Provjeri sandučić s neželjenom poštom. Ako treba, možemo ti <a href="%%url%%">ponovo poslati potvrdu e-poštom</a>."
+authentication_error_email_not_verified_html = 'Tvoja e-adresa još nije potvrđena. Provjeri sandučić s neželjenom poštom. Ako treba, možemo ti <a href="%%url%%">ponovo poslati potvrdu e-poštom</a>.'
 authentication_error_expired = "Zahtjev za autentifikaciju je istekao."
 authentication_error_in_progress = "Zahtjev za autentifikacijom se već obrađuje. Pokušaj kasnije ponovo, ako moraš početi ispočetka."
 authentication_error_invalid = "Neispravna prijava – pokušaj ponovo."
@@ -335,7 +335,7 @@ Displaying the top = "Prikaz prvih"
 Document Inspector = "Inspektor dokumenta"
 Document Type = "Vrsta dokumenta"
 DOI = "Digitalni identifikator objekta"
-doi_detected_html = "Čini se da tvoje pretraživanje sadrži digitalni identifikator objekta. Klikni ovdje za provjeru dostupnosti resursa: <a href="%%url%%">%%doi%%</a>"
+doi_detected_html = 'Čini se da tvoje pretraživanje sadrži digitalni identifikator objekta. Klikni ovdje za provjeru dostupnosti resursa: <a href="%%url%%">%%doi%%</a>'
 Draw Search Box = "Crtaj polje za pretraživanje"
 draw_searchbox_end = "Otpusti miša kako bi se crtanje završilo."
 draw_searchbox_start = "Klikni i povuci za odabir područja."
@@ -374,7 +374,7 @@ Email address is invalid = "E-adresa je neispravna"
 Email Record = "Pošalji zapis e-poštom"
 Email this = "Pošalji ovo e-poštom"
 Email this Search = "Pošalji ovo pretraživanje e-poštom"
-email_change_pending_html = "Imaš još nedovršenu promjenu e-adrese u %%pending%%. Klikni poveznicu u potvrdnoj e-poruci koja je poslana na ovu adresu, kako bi se promjena dovršila. Ako treba, možemo <a href="%%url%%">ponovo poslati potvrdnu e-poruku</a>."
+email_change_pending_html = 'Imaš još nedovršenu promjenu e-adrese u %%pending%%. Klikni poveznicu u potvrdnoj e-poruci koja je poslana na ovu adresu, kako bi se promjena dovršila. Ako treba, možemo <a href="%%url%%">ponovo poslati potvrdnu e-poruku</a>.'
 email_failure = "Greška – Nije moguće poslati poruku"
 email_link = "Poveznica"
 email_login_desc = "Koristi sljedeću poveznicu za prijavu. Ako osobno nisi pokrenuo/la prijavu, slobodno zanemari ovu poruku. Poveznica vrijedi samo ograničeno vrijeme i samo u pregledniku, u kojem si upisao/la e-adresu."
@@ -546,7 +546,7 @@ history_delete = "Izbriši"
 history_delete_link = "Izbriši"
 history_empty_search = "Bilo što (prazno pretraživanje)"
 history_limits = "Ograničenja"
-history_login_html = "<a href="%%url%%">Prijavi se</a> za prikaz tvojih spremljenih pretraga."
+history_login_html = '<a href="%%url%%">Prijavi se</a> za prikaz tvojih spremljenih pretraga.'
 history_no_saved_searches = "Još nemaš nijednu spremljenu pretragu."
 history_no_searches = "U tvojoj povijesti trenutačno nema pretraživanja."
 history_purge = "Poništi nespremljena pretraživanja"
@@ -600,8 +600,8 @@ hold_items_available = "Nije moguće postaviti narudžbu, jer su djela dostupna.
 hold_login = "Prijavi se ako želiš primati informacije o narudžbama i rezervacijama"
 hold_place = "Postavi zahtjev"
 hold_place_fail_missing = "Tvoj zahtjev nije uspio. Nedostajali su neki podaci. Zatraži pomoć na informacijskom pultu"
-hold_place_success_html = "Tvoj zahtjev je uspio. <a href="%%url%%">Tvoje narudžbe i rezervacije</a>."
-hold_profile_html = "Za primanje informacija o narudžbama i rezervacijama, postavi vlastiti <a href="%%url%%">profil</a>."
+hold_place_success_html = 'Tvoj zahtjev je uspio. <a href="%%url%%">Tvoje narudžbe i rezervacije</a>.'
+hold_profile_html = 'Za primanje informacija o narudžbama i rezervacijama, postavi vlastiti <a href="%%url%%">profil</a>.'
 hold_proxied_by = "Zatraženo od"
 hold_proxied_for = "Zatraženo za"
 hold_queue_position = "Mjesto u redu čekanja"
@@ -648,10 +648,10 @@ ill_request_pick_up_library = "Knjižnica za preuzimanje posudbe"
 ill_request_pick_up_location = "Lokacija za preuzimanje posudbe"
 ill_request_place_fail_missing = "Tvoj zahtjev nije uspio. Nedostajali su neki podaci. Zatraži pomoć na informacijskom pultu"
 ill_request_place_success = "Tvoj zahtjev je uspio"
-ill_request_place_success_html = "Tvoj zahtjev je uspio. <a href="%%url%%">Zahtjevi za međuknjižničnom posudbom</a>."
+ill_request_place_success_html = 'Tvoj zahtjev je uspio. <a href="%%url%%">Zahtjevi za međuknjižničnom posudbom</a>.'
 ill_request_place_text = "Postavi zahtjev za međuknjižničnom posudbom"
 ill_request_processed = "Obrađeno"
-ill_request_profile_html = "Za dobivanje informacija o zahtjevima za međuknjižničnom posudbom postavi vlastiti <a href="%%url%%">profil</a>."
+ill_request_profile_html = 'Za dobivanje informacija o zahtjevima za međuknjižničnom posudbom postavi vlastiti <a href="%%url%%">profil</a>.'
 ill_request_submit_text = "Postavi zahtjev"
 Illustrated = "Ilustrirano"
 ils_account_create_error = "Nije bilo moguće stvoriti tvoj račun na našem sustavu knjižnice. Ako problem ne nestane, kontaktiraj knjižnicu."
@@ -832,7 +832,7 @@ no_email_address = "Nedostaje e-adresa."
 no_items_selected = "Nije odabrano niti jedno djelo"
 no_proxied_user = "Bez posrednika (zatraži za sebe)"
 nohit_active_filters = "Jedna ili više faseta filtra je primijenjena na pretraživanje. Ako ukloniš filtre, vjerojatno ćeš dobiti više rezultata."
-nohit_change_tab = "Pretražuješ karticu "%%activeTab%%". Možda ćeš u ostalim karticama također nešto naći:"
+nohit_change_tab = 'Pretražuješ karticu "%%activeTab%%". Možda ćeš u ostalim karticama također nešto naći:'
 nohit_filters = "Trenutačno primijenjen filtar na ovo pretraživanje:"
 nohit_heading = "Bez rezultata!"
 nohit_lookfor_html = "Tvoje pretraživanje – <strong>%%lookfor%%</strong> – se ne poklapa s niti jednim resursom."
@@ -933,7 +933,7 @@ od_info_unavail = "Ova informacija trenutačno nije dostupna."
 od_is_checkedout = "Ovaj naslov si posudio/la. Rok posudbe je %%due_date%%."
 od_is_on_hold = "Ovaj naslov si naručio/la."
 od_loans = "OverDrive posudbe"
-od_mycontent_help = "Za informacije o naslovima i za pomoć pri preuzimanju, pogledaj <a href="%%url%%">OverDrive pomoć</a>."
+od_mycontent_help = 'Za informacije o naslovima i za pomoć pri preuzimanju, pogledaj <a href="%%url%%">OverDrive pomoć</a>.'
 od_none_found = "Nema naslova."
 od_return_failure = "Nije bilo moguće vratiti naslov."
 od_return_success = "Ovaj je naslov vraćen."
@@ -1028,7 +1028,7 @@ profile_update = "Tvoj profil je promijenjen kao što je zatraženo"
 pronounced = "izgovoreno"
 Provider = "Pružatelj usluge"
 proxied_user = "Postavi zahtjev za posredničkog korisnika"
-proxy_hold_place_success_html = "Tvoj posrednički zahtjev je uspio. <a href="%%url%%">Tvoje narudžbe i rezervacije</a>."
+proxy_hold_place_success_html = 'Tvoj posrednički zahtjev je uspio. <a href="%%url%%">Tvoje narudžbe i rezervacije</a>.'
 Public = "Javno"
 public_list_indicator = "Javno"
 Publication = "Izdanje"
@@ -1098,7 +1098,7 @@ Refine Results = "Detaljiziraj rezultate"
 Region = "Regija"
 relais_available = "Ovo je djelo dostupno putem međuknjižnične posudbe. Želiš li ga zatražiti na taj način?"
 relais_checking = "Provjera dostupnosti …"
-relais_error_html = "Došlo je do greške s ovim zahtjevom. Zatraži ovo djelo putem <a href="%%url%%" target='new'>web stranice za međuknjižničnu posudbu</a>."
+relais_error_html = 'Došlo je do greške s ovim zahtjevom. Zatraži ovo djelo putem <a href="%%url%%" target="new">web stranice za međuknjižničnu posudbu</a>.'
 relais_request = "Zahtjev za međuknjižničnu posudbu"
 relais_requesting = "Zahtjev u tijeku …"
 relais_search = "Traži međuknjižničnu posudbu"
@@ -1271,10 +1271,10 @@ storage_retrieval_request_invalid_pickup = "Upisana je neispravna lokacija za pr
 storage_retrieval_request_issue = "Datum"
 storage_retrieval_request_place_fail_missing = "Tvoj zahtjev nije uspio. Nedostajali su neki podaci. Zatraži pomoć na informacijskom pultu"
 storage_retrieval_request_place_success = "Tvoj je zahtjev uspio"
-storage_retrieval_request_place_success_html = "Tvoj je zahtjev uspio. <a href="%%url%%">Zahtjev za pronalaženjem u spremištu</a>."
+storage_retrieval_request_place_success_html = 'Tvoj je zahtjev uspio. <a href="%%url%%">Zahtjev za pronalaženjem u spremištu</a>.'
 storage_retrieval_request_place_text = "Postavi zahtjev za pronalaženjem u spremištu"
 storage_retrieval_request_processed = "Obrađeno"
-storage_retrieval_request_profile_html = "Za primanje informacija o zahtjevu za pronalaženjem u spremištu, postavi <a href="%%url%%">profil</a>."
+storage_retrieval_request_profile_html = 'Za primanje informacija o zahtjevu za pronalaženjem u spremištu, postavi <a href="%%url%%">profil</a>.'
 storage_retrieval_request_reference = "Referenca"
 storage_retrieval_request_selected_item = "Odabrano djelo"
 storage_retrieval_request_submit_text = "Postavi zahtjev"
@@ -1350,7 +1350,7 @@ total_saved_items = "Ukupno spremljenih djela"
 total_tags = "Ukupno oznaka"
 total_users = "Ukupno korisnika"
 Transliterated Title = "Transliterirani naslov"
-tree_search_limit_reached_html = "Pretraživanjem je dobiven prevelik broj rezultata za prikaz u stablu. Prikazuje se samo prvih <b>%%limit%%</b> djela. Za cjelovito pretraživanje klikni <a id="fullSearchLink" href="%%url%%" target="_blank">ovdje.</a>"
+tree_search_limit_reached_html = 'Pretraživanjem je dobiven prevelik broj rezultata za prikaz u stablu. Prikazuje se samo prvih <b>%%limit%%</b> djela. Za cjelovito pretraživanje klikni <a id="fullSearchLink" href="%%url%%" target="_blank">ovdje.</a>'
 trending_items_channel_title = "Najčitanija djela"
 unique_tags = "Jedinstvene oznake"
 University Library = "Sveučilišna knjižnica"
@@ -1424,7 +1424,7 @@ You do not have any holds or recalls placed = "Nemaš postavljenih narudžbi ili
 You do not have any interlibrary loan requests placed = "Nemaš postavljenih zahtjeva za međuknjižničnom posudbom"
 You do not have any items checked out = "Nemaš ništa posuđenog"
 You do not have any library cards = "Nemaš članskih iskaznica"
-You do not have any saved resources = "Nemaš spremljenih resursa. Pokreni pretraživanje i za spremanje djela koristi gumb "Dodaj u favorite"."
+You do not have any saved resources = 'Nemaš spremljenih resursa. Pokreni pretraživanje i za spremanje djela koristi gumb "Dodaj u favorite".'
 You do not have any storage retrieval requests placed = "Nemaš postavljenih zahtjeva za pronalaženjem u spremištu"
 You must be logged in first = "Najprije se prijavi"
 Your Account = "Tvoj račun"
