--- a/languages/es.ini
+++ b/languages/es.ini
@@ -933,7 +933,7 @@ od_info_unavail = "Esta información no está disponible actualmente."
 od_is_checkedout = "Tiene este título en préstamo. Vence el %%due_date%%."
 od_is_on_hold = "Usted tiene este título en reserva."
 od_loans = "Préstamos Overdrive"
-od_mycontent_help = 'For information about and help with downloading these titles, see <a href="%%url%%">Overdrive Help</a>." "Para obtener información sobre y ayuda con la descarga de estos títulos, consulte <a href="%%url%%"> Overdrive Help </a>.'
+od_mycontent_help = 'Para obtener información sobre y ayuda con la descarga de estos títulos, consulte <a href="%%url%%"> Overdrive Help </a>.'
 od_none_found = "No se encontraron títulos."
 od_return_failure = "Este título no pudo ser devuelto."
 od_return_success = "Este título ha sido devuelto."
