Trivial formatting fix.

--- a/languages/CreatorRoles/pl.ini
+++ b/languages/CreatorRoles/pl.ini
@@ -252,7 +252,7 @@ prp = "Miejsce produkcji"
 prs = "Projektant produkcji"
 prt = "Drukarz"
 prv = "Dostawca"
-präses = 'Preses'
+präses = "Preses"
 pta = "Wnioskodawca patentowy"
 ptf = "Powód"
 pth = "Właściciel patentu"
