Minor translation updates/corrections.

--- a/languages/ru.ini
+++ b/languages/ru.ini
@@ -1265,6 +1265,7 @@ Start Page = "Первая страница"
 starting from = "начиная с"
 Status = "Статус"
 status_transit = "В пути"
+status_unknown_message = "Статус в реальном времени недоступен"
 Storage Retrieval Requests = "Запросы выборки из хранилища"
 storage_retrieval_request_available = "Доступна ячейка подхвата"
 storage_retrieval_request_cancel = "Отменить запросы выборки из хранилища"
