Updated German translation from André Lahmann.

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -748,6 +748,7 @@ Loading = "Wird geladen"
 loading_ellipsis = "Wird geladen …"
 Loan History = "Bisherige Ausleihen"
 loan_history_empty = "Sie haben keine bisherigen Ausleihen."
+loan_history_selected_purged = "Die ausgewählten Ausleihen wurden von Ihrer Ausleihhistorie gelöscht."
 Local Login = "Lokale Anmeldung"
 local_login_desc = "Geben Sie Ihren Benutzernamen und Ihr Passwort für diese Webseite ein."
 Located = "Standort"
