Updated Finnish/Swedish translations.

--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -1184,6 +1184,7 @@ search_OR = "Millä tahansa ehdoista (OR)"
 search_save_success = "Haku tallennettu."
 search_terms = "Hakuehdot"
 search_unsave_success = "Haku poistettu."
+searchform_reset_button = "Tyhjennä hakuehdot"
 seconds_abbrev = "s"
 see all = "näytä kaikki"
 See also = "Katso myös"
