--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -1184,6 +1184,7 @@ search_OR = "Vilka söktermer som helst (OR)"
 search_save_success = "Sökningen har sparats."
 search_terms = "Sökningsvillkor"
 search_unsave_success = "Sökningen har raderats."
+searchform_reset_button = "Rensa söktermer"
 seconds_abbrev = "s"
 see all = "Visa alla"
 See also = "Se också"
