Updated Finnish/Swedish translations.

--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -9,6 +9,7 @@ account_block_options_missing = "Vissa alternativ har tagits bort på grund av l
 account_checkouts_due = "Lån som förfaller snart"
 account_checkouts_overdue = "Försenade lån"
 account_has_alerts = "Kolla ditt konto"
+account_menu_label = "Kontoinformation och alternativ"
 account_normal_checkouts = "Lån som förfaller senare"
 account_requests_available = "Kan avhämtas"
 account_requests_in_transit = "På väg"
@@ -309,6 +310,7 @@ date_year_placeholder = "Å"
 Debug Information = "Felrapport"
 deep_paging_failure = "Resultatsidan du begärde är för närvarande inte tillgänglig. Du har omdirigerats till sidan %%page%%."
 del_search = "Radera sökgruppen"
+del_search_num = "Ta bort sökgrupp %%num%%"
 Delete = "Radera"
 delete_account_confirm = "Är du säker på att du vill radera ditt konto?"
 delete_account_description_html = "Sparade sökningar och favoritlistor raderas. Om du vill kan du skapa ett nytt konto senare."
@@ -340,6 +342,7 @@ draw_searchbox_end = "Avsluta dra för att komplettera begränsningen."
 draw_searchbox_start = "Klicka och dra för att begränsa området."
 Due = "Förfaller"
 Due Date = "Förfallodag"
+dumb_captcha_prompt = "Ange ovanstående text i omvänd ordning:"
 DVD = "DVD"
 eBook = "E-bok"
 Edit = "Ändra"
@@ -394,6 +397,8 @@ empty_search_disallowed = "Det går inte att söka i sökmålet utan söktermer"
 Enable Auto Config = "Enable Auto Config"
 End Page = "Sista sidan"
 eol_ellipsis = "…"
+epf_recommendations = "Publikationsrekommendationer"
+epf_recommendations_more = "Fler publikationsrekommendationer"
 ePub Full Text = "ePub-fulltext"
 Era = "Tidsperiod"
 error_inconsistent_parameters = "Ett fel har uppstått. Motstridande parametrar."
@@ -600,7 +605,7 @@ hold_login = "Logga in för att kontrollera reserveringsmöjlighet"
 hold_place = "Reservera"
 hold_place_fail_missing = "Reservering misslyckades p.g.a. att uppgifter saknas. Kontakta kundtjänst."
 hold_place_success_html = 'Material har reserverats. <a href="%%url%%">Reserveringar</a>.'
-hold_profile_html = "Logga in <a href %%url%%>med bibliotekskortet</a> för att se reserveringsmöjligheter."
+hold_profile_html = 'Logga in <a href="%%url%%">med bibliotekskortet</a> för att se reserveringsmöjligheter.\''
 hold_proxied_by = "Begärd av"
 hold_proxied_for = "Begärd för"
 hold_queue_position = "Placering i kön"
@@ -712,6 +717,11 @@ Last Name = "Efternamn"
 Last Search Result = "Sista sökresultat"
 less = "mindre"
 less_ellipsis = "mindre…"
+libguides_profile_suggestion_heading = "Prata med en ämnesbibliotekarie"
+libguides_recommendations = "Research Guide -rekommendationer"
+libguides_recommendations_more = "Fler Research Guide -rekommendationer"
+libguidesaz_recommendations = "Databasrekommendationer"
+libguidesaz_recommendations_more = "Fler databasrekommendationer"
 libphonenumber_invalid = "Telefonnummer ogiltigt"
 libphonenumber_invalidcountry = "Ogiltig landkod"
 libphonenumber_invalidregion = "Ogiltig regionskod:"
@@ -784,6 +794,7 @@ MLA Citation = "MLA-referens"
 MLA Edition Citation = "MLA-referens (8:e uppl.)"
 Mobile Number = "Mobiltelefon"
 mobile_link = "You appear to be on a mobile device; switch to mobile view?"
+mobile_toggle_navigation_text = "Växla meny"
 Monograph Title = "Monografisk titel"
 more = "mer"
 More catalog results = "Fler resultat i katalog"
@@ -1034,6 +1045,10 @@ pronounced = "uttalas"
 Provider = "Leverantör"
 proxied_user = "Begära för en proxyanvändare"
 proxy_hold_place_success_html = 'Proxybegäran lyckades. <a href="%%url%%">Reserveringar</a>.'
+proxy_list_by = "Dessa användare är dina delegater:"
+proxy_list_description = "En användares delegater har tillstånd att utföra vissa åtgärder för deras räkning."
+proxy_list_for = "Du är delegat för dessa användare:"
+proxy_list_heading = "Delegater"
 Public = "Offentlig"
 public_list_indicator = "offentlig lista"
 Publication = "Publikation"
@@ -1191,7 +1206,15 @@ See also = "Se också"
 see_all_ellipsis = "Visa alla…"
 Select this record = "Välj denna post"
 Select your carrier = "Välj operatör"
+select_all_on_page = "Välj alla poster på sidan"
+select_item = "Välj rad för ytterligare åtgärder"
+select_item_checked_out_renew = "Välj lån för förnyelse"
+select_item_hold_cancel = "Välj reservering för annullering"
+select_item_ill_request_cancel = "Välj fjärrlånebeställning för annullering"
+select_item_purge = "Välj rad för rensning"
+select_item_storage_retrieval_request_cancel = "Välj beställning för annullering"
 select_page = "Välj sida"
+select_page_cart = "Välj alla poster i bokkorgen"
 select_pickup_location = "Välj avhämtningsställe"
 select_request_group = "Välj grupp"
 Selected = "Vald"
@@ -1342,6 +1365,7 @@ Title View = "Titelvy"
 title_hold_place = "Reservera på titelnivån"
 title_wrapper = "%%pageTitle%% %%titleSeparator%% %%siteTitle%%"
 To = "Mottagare"
+toggle_dropdown = "Växla rullgardinsmenyn"
 Too Many Email Recipients = "För många e-postmottagare"
 too_many_favorites = "Hela listan kan inte visas på en gång p.g.a. dess storlek. Dela upp dina favoriter på flera listor eller begränsa sökningen genom att använda taggar."
 too_many_new_items = "Alla nyheter kan inte visas på en lista. Pröva att begränsa sökningen."
@@ -1408,6 +1432,7 @@ View Records = "Visa posterna"
 View Retraction Notice = "Visa meddelande om återkallelse"
 View this record in EBSCOhost = "Visa denna post i EBSCOhost"
 view_already_selected = "%%current%% (vald)"
+view_in_opac = "Visa i användargränssnittet"
 visual_facet_parent = "Från"
 Volume = "Volym"
 Volume Holdings = "Tillgängliga nummer"
