* fix translation for Checkedout in German

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -217,7 +217,7 @@ Check Recall = "Möglichkeit einer Vormerkung prüfen"
 check_profile = "Benutzerangaben überprüfen."
 Checked Out = "Ausgeliehen"
 Checked Out Items = "Ausgeliehene Medien"
-Checkedout = "Ausgliehene Medien"
+Checkedout = "Ausgeliehene Medien"
 Checkout Date = "Ausleihdatum"
 Chicago Citation = "Chicago Zitierstil"
 Chicago Edition Citation = "Chicago-Zitierstil (17. Ausg.)"
