* fix typo in German translation of confirm_ill_request_cancel_all_text

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -264,7 +264,7 @@ confirm_dialog_no = "Abbrechen"
 confirm_dialog_yes = "Ja"
 confirm_hold_cancel_all_text = "Möchten Sie alle Ihre Bestellungen annullieren?"
 confirm_hold_cancel_selected_text = "Möchten Sie die ausgewählten Bestellungen annullieren?"
-confirm_ill_request_cancel_all_text = "Möchten Sie alle Ihre laufendenden Fernleihanfragen widerrufen?"
+confirm_ill_request_cancel_all_text = "Möchten Sie alle Ihre laufenden Fernleihanfragen widerrufen?"
 confirm_ill_request_cancel_selected_text = "Möchten Sie die ausgewählten Fernleihanfragen widerrufen?"
 confirm_new_password = "Neues Passwort bestätigen"
 confirm_renew_all_text = "Möchten Sie alle Ihre Ausleihen verlängern?"
