Fix quoting in translation strings.

--- a/languages/se.ini
+++ b/languages/se.ini
@@ -546,7 +546,7 @@ hold_login = "Čále iežat sisa dárkkistit várrenvejolašvuođa"
 hold_place = "Daga várrema"
 hold_place_fail_missing = "Bivdda ii lihkostuvvan váilevaš dieđuid dihte. Váldde oktavuođa girjeráju áššehasbálvalussii."
 hold_place_success_html = "Várrenbivdda lihkostuvai. <a href=%%url%%>Várremat</a>."
-hold_profile_html = "Čálihuva<a href=%%url%%>girjerádjogoarttain</a> vai oainnát várremiid."
+hold_profile_html = 'Čálihuva<a href="%%url%%">girjerádjogoarttain</a> vai oainnát várremiid.'
 hold_queue_position = "Sajádat ráiddus"
 hold_record_already_on_loan = "Girji lea juo dutnje luoikkahuvvon"
 hold_request_group = "Várrema čuozáhat"
