--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -605,7 +605,7 @@ hold_login = "Logga in för att kontrollera reserveringsmöjlighet"
 hold_place = "Reservera"
 hold_place_fail_missing = "Reservering misslyckades p.g.a. att uppgifter saknas. Kontakta kundtjänst."
 hold_place_success_html = 'Material har reserverats. <a href="%%url%%">Reserveringar</a>.'
-hold_profile_html = 'Logga in <a href="%%url%%">med bibliotekskortet</a> för att se reserveringsmöjligheter.\''
+hold_profile_html = 'Logga in <a href="%%url%%">med bibliotekskortet</a> för att se reserveringsmöjligheter.'
 hold_proxied_by = "Begärd av"
 hold_proxied_for = "Begärd för"
 hold_queue_position = "Placering i kön"
