Fix links in translation strings.

--- a/languages/bn.ini
+++ b/languages/bn.ini
@@ -1099,7 +1099,7 @@ Refine Results = "ফলাফল পরিমার্জন করুন"
 Region = "এলাকা ভিত্তিক"
 relais_available = "এই প্রলেখটি আন্তঃগ্রন্থাগার ঋণের মাধ্যমে পাওয়া যেতে পারে। আপনি কি অনুরোধ জানাতে চান?"
 relais_checking = "প্রলেখটি উপলব্ধ কি না খোঁজ করা হচ্ছে ..."
-relais_error_html = 'এই অনুরোধটি পালনে অসুবিধা রয়েছে। <a href="%%url%%" target="new">এখানে</a> ক্লিক করে আন্তঃগ্রন্থাগার ঋণের অনুরোধ জানান।'
+relais_error_html = 'এই অনুরোধটি পালনে অসুবিধা রয়েছে। <a href="%%url%%" target="_blank">এখানে</a> ক্লিক করে আন্তঃগ্রন্থাগার ঋণের অনুরোধ জানান।'
 relais_request = "আন্তঃগ্রন্থাগার ঋণের অনুরোধt"
 relais_requesting = "অনুরোধ জানানো হচ্ছে..."
 relais_search = "আন্তঃগ্রন্থাগার ঋণ অনুসন্ধান"
