--- a/languages/cy.ini
+++ b/languages/cy.ini
@@ -524,7 +524,7 @@ hold_login = "Mewngofnodi am wybodaeth ynghylch daliadau ac adalw"
 hold_place = "Gosod Cais"
 hold_place_fail_missing = "Mae eich cais wedi methu. Roedd peth data ar goll. Cysylltwch â'r ddesg fenthyca am gymorth pellach"
 hold_place_success_html = 'Roedd eich cais yn llwyddiannus. <a href="%%url%%">Daliadau ac Adalwadau</a>.'
-hold_profile_html = 'Am wybodaeth dal a galw\'n ôl, rhaid i chi sefydlu <a href=%%url%%">Proffeil Catalog Llyfrgell</a>."'
+hold_profile_html = 'Am wybodaeth dal a galw\'n ôl, rhaid i chi sefydlu <a href="%%url%%">Proffeil Catalog Llyfrgell</a>.'
 hold_queue_position = "Safle yn y Ciw"
 hold_record_already_on_loan = "Mae'r record eisoes ar fenthyg gennych chi"
 hold_request_group = "Cais oddi wrth"
@@ -974,7 +974,7 @@ Refine Results = "Mireinio'r Canlyniadau"
 Region = "Rhanbarth"
 relais_available = "Mae'r eitem hon ar gael trwy Fenthyciad Rhynglyfrgellol. Hoffech chi wneud cais amdani?"
 relais_checking = "Gwirio argaeledd..."
-relais_error_html = 'Cafwyd problem o ran y cais hwn. Cliciwch <a href="%%url%%" target="new">yma</a> i wneud cais am yr eitem hon gan ddefnyddio gwefan Benthyciad Rhynglyfrgellol.'
+relais_error_html = 'Cafwyd problem o ran y cais hwn. Cliciwch <a href="%%url%%" target="_blank">yma</a> i wneud cais am yr eitem hon gan ddefnyddio gwefan Benthyciad Rhynglyfrgellol.'
 relais_request = "Cais am Fenthyciad Rhynglyfrgellol"
 relais_requesting = "Gwneud cais am..."
 relais_search = "Chwiliwch Fenthyciadau Rhynglyfrgellol"
@@ -1220,7 +1220,7 @@ total_saved_items = "Cyfanswm Eitemau wedi'u Cadw"
 total_tags = "Cyfanswm Tagiau"
 total_users = "Cyfanswm Defnyddwyr"
 Transliterated Title = "Teitl Wedi'i Drawslythrennu"
-tree_search_limit_reached_html = 'Roedd gormod o ganlyniadau i\'w dangos yn y goeden. Ond yn dangos y <b>%%limit%%</b> eitem gyntaf. I chwilio\'r cyfan, cliciwch <a id=fullSearchLink" href="%%url%%" target="_blank">yma.</a>'
+tree_search_limit_reached_html = 'Roedd gormod o ganlyniadau i\'w dangos yn y goeden. Ond yn dangos y <b>%%limit%%</b> eitem gyntaf. I chwilio\'r cyfan, cliciwch <a id="fullSearchLink" href="%%url%%" target="_blank">yma.</a>'
 trending_items_channel_title = "Eitemau sy'n Trendio"
 unique_tags = "Tagiau Unigryw"
 University Library = "Llyfrgell y Brifysgol"
