--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1119,7 +1119,7 @@ Refine Results = "Refine Results"
 Region = "Region"
 relais_available = "This item is available through Interlibrary Loan. Would you like to request it?"
 relais_checking = "Checking availability..."
-relais_error_html = 'There was a problem with this request. Please request this item using the <a href="%%url%%" target="new">Interlibrary Loan website</a>.'
+relais_error_html = 'There was a problem with this request. Please request this item using the <a href="%%url%%" target="_blank">Interlibrary Loan website</a>.'
 relais_request = "Interlibrary Loan Request"
 relais_requesting = "Requesting..."
 relais_search = "Search Interlibrary Loan"
