--- a/languages/eu.ini
+++ b/languages/eu.ini
@@ -1473,7 +1473,7 @@ Refine Results = "Findu emaitzak"
 Region = "Eskualdea"
 relais_available = "Artikulu hau liburutegien arteko maileguaren bidez libre dago. Eskatzea gustatuko litzaizuke?"
 relais_checking = "Erabilgarritasuna begiratuz..."
-relais_error_html = 'Eskaera honekin arazo bat egon zen. Klik egin <a href="%%url%%" target="new">here</a> Eskatu artikulu hau liburutegien arteko maileguaren webgunean erabiliz.'
+relais_error_html = 'Eskaera honekin arazo bat egon zen. Klik egin <a href="%%url%%" target="_blank">here</a> Eskatu artikulu hau liburutegien arteko maileguaren webgunean erabiliz.'
 relais_request = "Liburutegien arteko maileguaren eskaera"
 relais_requesting = "Eskatuz..."
 relais_search = "Liburutegien arteko mailegua bilatzea"
