--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -1118,7 +1118,7 @@ Refine Results = "Tarkenna hakua"
 Region = "Alue"
 relais_available = "Aineisto on saatavissa kaukolainana. Haluatko tehdä kaukolainapyynnön?"
 relais_checking = "Tarkistetaan saatavuutta..."
-relais_error_html = 'Pyyntö epäonnistui. Tee pyyntö <a href="%%url%%" target="new">kaukolainauspalvelun sivuilla.</a>'
+relais_error_html = 'Pyyntö epäonnistui. Tee pyyntö <a href="%%url%%" target="_blank">kaukolainauspalvelun sivuilla.</a>'
 relais_request = "Kaukopalvelupyyntö"
 relais_requesting = "Pyyntöä lähetetään..."
 relais_search = "Kaukopalveluhaku"
