--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -1097,7 +1097,7 @@ Refine Results = "Affiner les résultats"
 Region = "Région"
 relais_available = "Ce document est disponible par le Prêt entre bibliothèques. Voulez-vous faire une demande ?"
 relais_checking = "Vérification de la disponibilité..."
-relais_error_html = 'Un problème est arrivé pendant votre demande. Cliquez <a href="%%url%%" target="new">ici</a> pour demander ce document en utilisant le site Web du Prêt entre bibliothèques.'
+relais_error_html = 'Un problème est arrivé pendant votre demande. Cliquez <a href="%%url%%" target="_blank">ici</a> pour demander ce document en utilisant le site Web du Prêt entre bibliothèques.'
 relais_request = "Demande de prêt entre bibliothèques"
 relais_requesting = "Demande en cours..."
 relais_search = "Recherche pour le Prêt entre bibliothèques"
