--- a/languages/hy.ini
+++ b/languages/hy.ini
@@ -1097,7 +1097,7 @@ Refine Results = "Հստակեցնել արդյունքները"
 Region = "Տարածաշրջան"
 relais_available = "Այս նյութը հասանելի է միջգրադարանային բաժնույթի միջոցով: Ցանկանու՞մ եք դա պահանջել:"
 relais_checking = "Հասանելիության ստուգում..."
-relais_error_html = 'Այս հարցման համար խնդիր առաջացավ: Խնդրում ենք պահանջել այս նյութը, օգտագործելով <a href="%%url%%" target="new">Միջգրադարանային բաժնույթի կայքը</a>։'
+relais_error_html = 'Այս հարցման համար խնդիր առաջացավ: Խնդրում ենք պահանջել այս նյութը, օգտագործելով <a href="%%url%%" target="_blank">Միջգրադարանային բաժնույթի կայքը</a>։'
 relais_request = "Միջգրադարանային բաժնույթի հարցում"
 relais_requesting = "Հարցում..."
 relais_search = "Փնտրեք Միջգրադարանային բաժնույթը"
