--- a/languages/pt-br.ini
+++ b/languages/pt-br.ini
@@ -1097,7 +1097,7 @@ Refine Results = "Refinar Resultados"
 Region = "Região"
 relais_available = "Este item está disponível por meio do empréstimo entre bibliotecas. Gostaria de requisitá-lo?"
 relais_checking = "Verificando disponibilidade..."
-relais_error_html = 'Houve um problema com seu pedido. Clique em <a href="%%url%%" target="new">aqui</a> para pedir esse item usando o site de empréstimo entre bibliotecas.'
+relais_error_html = 'Houve um problema com seu pedido. Clique em <a href="%%url%%" target="_blank">aqui</a> para pedir esse item usando o site de empréstimo entre bibliotecas.'
 relais_request = "Pedido de Empréstimo entre Bibliotecas"
 relais_requesting = "Pedindo..."
 relais_search = "Buscar Emprestimo entre Bibliotecas"
