--- a/languages/tr.ini
+++ b/languages/tr.ini
@@ -1151,7 +1151,7 @@ Refine Results = "Sonuçları Daraltın"
 Region = "Bölge"
 relais_available = "Bu kayda Kütüphanelerarası Ödünç Verme yoluyla ulaşılabilir. Talep etmek ister misiniz?"
 relais_checking = "Kullanılabilirliği kontrol ediliyor..."
-relais_error_html = 'Bu istekle ilgili bir sorun oluştu. <a href="%%url%%" target="new">Buraya tıklayın</a> Kütüphaneler arası ödünç verme web sitesini kullanarak bu öğeyi istemek için.'
+relais_error_html = 'Bu istekle ilgili bir sorun oluştu. <a href="%%url%%" target="_blank">Buraya tıklayın</a> Kütüphaneler arası ödünç verme web sitesini kullanarak bu öğeyi istemek için.'
 relais_request = "Kütüphaneler Arası Ödünç Verme İsteği"
 relais_requesting = "İsteniyor..."
 relais_search = "Kütüphanelerarası Ödünç Vermeyi Ara"
