--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -1096,7 +1096,7 @@ Refine Results = "Upřesnit hledání"
 Region = "Oblast"
 relais_available = "Tento dokument je dostupný v rámci meziknihovní výpůjční služby. Chcete jej objednat?"
 relais_checking = "Zjišťuji dostupnost..."
-relais_error_html = 'Při zpracování požadavku se vyskytla chyba. Klikněte <a href="%%url%%" target="new">zde</a> pro objednání dokumentu na stránkách systému pro meziknihovní výpůjčky.'
+relais_error_html = 'Při zpracování požadavku se vyskytla chyba. Klikněte <a href="%%url%%" target="_blank">zde</a> pro objednání dokumentu na stránkách systému pro meziknihovní výpůjčky.'
 relais_request = "Objednávka meziknihovní výpůjčky"
 relais_requesting = "Objednávám..."
 relais_search = "Hledat v meziknihovních výpůjčkách"
