--- a/languages/ru.ini
+++ b/languages/ru.ini
@@ -1114,7 +1114,7 @@ Refine Results = "Отмена результатов"
 Region = "Регион"
 relais_available = "Этот предмет доступен через Межбиблиотечный абонемент. Вы хотите запросить его?"
 relais_checking = "Проверка доступности..."
-relais_error_html = 'Возникла проблема с этим запросом. Пожалуйста, запросите этот элемент, используя <a href="%%url%%" target="new">веб-сайт Межбиблиотечного абонемента</a>.'
+relais_error_html = 'Возникла проблема с этим запросом. Пожалуйста, запросите этот элемент, используя <a href="%%url%%" target="_blank">веб-сайт Межбиблиотечного абонемента</a>.'
 relais_request = "IЗапрос на межбиблиотечный абонемент"
 relais_requesting = "Запрос..."
 relais_search = "Поиск по межбиблиотечному абонементу"
