Updated Finnish/Swedish translations.

--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -245,6 +245,7 @@ collection_disambiguation = "Löytyi useita vastaavia kokoelmia"
 collection_empty = "Ei näytettävää."
 collection_view_record = "Näytä tietue"
 Collections = "Kokoelmat"
+combined_jump_links_intro = "Siirry hakutuloksiin:"
 comment_anonymous_user = "Anonyymi"
 comment_error_load = "Virhe: Kommenttilistaa ei voitu muuttaa"
 comment_error_save = "Virhe: Kommenttia ei voitu tallentaa"
