--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -245,6 +245,7 @@ collection_disambiguation = "Hittade flera samlingar"
 collection_empty = "Inget att visa"
 collection_view_record = "Visa posten"
 Collections = "Samlingar"
+combined_jump_links_intro = "Hoppa till resultat:"
 comment_anonymous_user = "Anonym"
 comment_error_load = "Fel: kommentarlistan kunde inte ändras"
 comment_error_save = "Fel: kommentaren kunde inte sparas"
