Update MLA label to 9th edition.

--- a/languages/ar.ini
+++ b/languages/ar.ini
@@ -794,7 +794,7 @@ Message From Sender = "رسالة من المرسل"
 Metadata Prefix = "بادئة الميتاداتا"
 Microfilm = "مكروفيلم"
 MLA Citation = "MLA استشهاد"
-MLA Edition Citation = "توثيق جمعية اللغة المعاصرة MLA (الطبعة الثامنة)"
+MLA Edition Citation = "توثيق جمعية اللغة المعاصرة MLA (الإصدار التاسع)"
 Mobile Number = "رقم الهاتف المحمول"
 mobile_link = "يبدو أنك تستخدم جهاز محمول ؛ هل تريد التحويل إلى عرض الهاتف المحمول؟"
 mobile_toggle_navigation_text = "تبديل التنقل"
