Progress on Croatian translations.

--- a/languages/CreatorRoles/hr.ini
+++ b/languages/CreatorRoles/hr.ini
@@ -9,7 +9,7 @@
 ;   (http://swbtools.bsz-bw.de/cgi-bin/help.pl?cmd=kat&val=3010)
 ; Note: In some cases, terms are case sensitive, and case determines meaning;
 ;       for example, see Beiträger vs. beiträger.
-abr = "Autor skraćenog djela"
+abr = "Autor skraćivanja"
 acp = "Autor kopija umjetnina"
 act = "Glumac"
 adi = "Kreativni direktor"
