--- a/languages/ILSMessages/hr.ini
+++ b/languages/ILSMessages/hr.ini
@@ -4,6 +4,8 @@ electronic_resources_block = "Ne možeš pristupiti elektronskim resursima"
 hold_wrong_user_institution = "Ne možeš naručiti građu od tražene knjižnice."
 lost_card = "Tvoja je kartica prijavljena kao izgubljena"
 message_from_library = "Imaš poruku od tvoje knjižnice"
+no_delete_notifications_scope = "Nemaš prava za brisanje obavijesti."
+no_read_notifications_scope = "Nemaš prava za čitanje obavijesti."
 renewal_block = "Ne možeš produžiti posudbe"
 requests_blocked = "Ne možeš zatražiti knjižničnu građu"
-storage_wrong_user_institution = "Ne možeš postavljati zahtjeve za pronalaženje građe od tražene knjižnice."
+storage_wrong_user_institution = "Ne možeš postavljati zahtjeve za pronalaženje u spremištu od tražene knjižnice."
