--- a/languages/DDC23/hr.ini
+++ b/languages/DDC23/hr.ini
@@ -1,5 +1,5 @@
 ; - Translation courtesy of Milo Ivir <mail@milotype.de>
-'000' = "Računalstvo, informacije, opća djela"
+'000' = "Računalstvo, informacije, opći radovi"
 '001' = "Znanje"
 '002' = "Knjiga"
 '003' = "Sustavi"
@@ -9,10 +9,10 @@
 '010' = "Bibliografija"
 '011' = "Bibliografije i katalozi"
 '012' = "Bibliografije i katalozi pojedinaca"
-'014' = "Djela anonimnih autora i autora s pseudonimom"
-'015' = "Djela iz određenih mjesta"
-'016' = "Djela o određenim temama"
-'017' = "Djela koja se nalaze u određenim zbirkama ili se nude na prodaju"
+'014' = "Radovi anonimnih autora i autora s pseudonimom"
+'015' = "Radovi iz određenih mjesta"
+'016' = "Radovi o određenim temama"
+'017' = "Radovi koji se čuvaju u određenim zbirkama ili se nude na prodaju"
 '020' = "Knjižnične i informacijske znanosti"
 '021' = "Odnosi knjižnica i arhiva"
 '022' = "Uprava za knjižnične ustanove"
@@ -21,16 +21,16 @@
 '026' = "Knjižnice i arhivi posvećeni određenim temama"
 '027' = "Opće knjižnice i arhivi"
 '028' = "Čitanje i korištenje drugih informacijskih medija"
-'030' = "Opća enciklopedijska djela"
-'031' = "Opća enciklopedijska djela na američkom engleskom jeziku"
-'032' = "Opća enciklopedijska djela na engleskom jeziku"
+'030' = "Opći enciklopedijski radovi"
+'031' = "Opći enciklopedijski radovi na američkom engleskom jeziku"
+'032' = "Opći enciklopedijski radovi na engleskom jeziku"
 '033' = "Enciklopedije na drugim germanskim jezicima"
 '034' = "Enciklopedije na francuskom, okcitanskom, katalonskom jeziku"
 '035' = "Enciklopedije na talijanskom, rumunjskom i srodnim jezicima"
 '036' = "Enciklopedije na španjolskom, portugalskom, galicijskom jeziku"
-'037' = "Opća enciklopedijska djela na slavenskim jezicima"
-'038' = "Opća enciklopedijska djela na skandinavskim jezicima"
-'039' = "Opća enciklopedijska djela na drugim jezicima"
+'037' = "Opći enciklopedijski radovi na slavenskim jezicima"
+'038' = "Opći enciklopedijski radovi na skandinavskim jezicima"
+'039' = "Opći enciklopedijski radovi na drugim jezicima"
 '050' = "Opće serijske publikacije"
 '051' = "Opće serijske publikacije na američkom engleskom jeziku"
 '052' = "Opće serijske publikacije na engleskom jeziku"
@@ -79,11 +79,11 @@
 '095' = "Knjige s posebnim uvezima"
 '096' = "Knjige s posebnim ilustracijama i materijalima"
 '097' = "Knjige s posebnim vlasništvom ili porijeklom"
-'098' = "Zabranjena djela, krivotvorine, obmane"
+'098' = "Zabranjeni radovi, krivotvorine, obmane"
 '099' = "Knjige s posebnim formatom"
 '100' = "Filozofija i psihologija"
 '101' = "Teorija filozofije"
-'102' = "Razna djela filozofije"
+'102' = "Razna građa o filozofiji"
 '103' = "Rječnici i enciklopedije"
 '105' = "Serijske publikacije filozofije"
 '106' = "Organizacije i menadžment"
@@ -193,7 +193,7 @@
 '223' = "Poetske knjige Starog zavjeta"
 '224' = "Proročke knjige Starog zavjeta"
 '225' = "Novi zavjet"
-'226' = "Evanđelja i Djela"
+'226' = "Evanđelja i činovi"
 '227' = "Poslanice"
 '228' = "Otkrivenje (Apokalipsa)"
 '229' = "Apokrifi i pseudoepigrafi"
@@ -217,7 +217,7 @@
 '250' = "Lokalna kršćanska crkva i vjerski redovi"
 '251' = "Propovijedanje (Homiletika)"
 '252' = "Tekstovi propovijedi"
-'253' = "Pastoralna djela (pastoralna teologija)"
+'253' = "Pastoralni rad (pastoralna teologija)"
 '254' = "Uprava mjesne crkve"
 '255' = "Vjerske kongregacije i redovi"
 '259' = "Biskupska briga o obiteljima i vrsta osoba"
@@ -226,7 +226,7 @@
 '262' = "Ekleziologija"
 '263' = "Dani, vremena, mjesta vjerskih obreda"
 '264' = "Javno bogoslužje"
-'265' = "Sakramenti, drugi obredi i djela"
+'265' = "Sakramenti, drugi obredi i činovi"
 '266' = "Misije"
 '267' = "Vjerske udruge"
 '268' = "Vjeronauk"
@@ -608,7 +608,7 @@
 '683' = "Hardver i kućanski aparati"
 '684' = "Namještaj i kućne radionice"
 '685' = "Kožni, krzneni i srodni proizvodi"
-'686' = "Tiskarstvo i povezane djelatnosti"
+'686' = "Tiskarstvo i srodne djelatnosti"
 '687' = "Odjeća i pribor"
 '688' = "Drugi finalni proizvodi i ambalaža"
 '690' = "Izgradnja zgrada"
@@ -622,7 +622,7 @@
 '698' = "Završni radovi"
 '700' = "Umjetnost"
 '701' = "Filozofija likovne i primjenjene umjetnosti"
-'702' = "Razna djela likovne i primjenjene umjetnosti"
+'702' = "Razna građa o likovnoj i primjenjenoj umjetnosti"
 '703' = "Rječnici likovne i primjenjene umjetnosti"
 '704' = "Posebne teme iz likovne i primjenjene umjetnosti"
 '705' = "Serijske publikacije likovne i primjenjene umjetnosti"
@@ -732,7 +732,7 @@
 '815' = "Američki govori na engleskom jeziku"
 '816' = "Američka pisma na engleskom jeziku"
 '817' = "Američki humor i satira na engleskom jeziku"
-'818' = "Američki razni spisi"
+'818' = "Razni američki spisi"
 '819' = "(Opcionalni broj)"
 '820' = "Engleska i staroengleska literatura"
 '821' = "Engleska poezija"
@@ -742,7 +742,7 @@
 '825' = "Engleski govori"
 '826' = "Engleska pisma"
 '827' = "Engleski humor i satira"
-'828' = "Engleski razni spisi"
+'828' = "Razni engleski spisi"
 '829' = "Stara engleska (anglosaksonska) literatura"
 '830' = "Literatura germanskih jezika"
 '831' = "Njemačka poezija"
@@ -752,7 +752,7 @@
 '835' = "Njemački govori"
 '836' = "Njemačka pisma"
 '837' = "Njemački humor i satira"
-'838' = "Njemački razni spisi"
+'838' = "Razni njemački spisi"
 '839' = "Druge germanske literature"
 '840' = "Literatura romanskih jezika"
 '841' = "Francuska poezija"
@@ -762,7 +762,7 @@
 '845' = "Francuski govori"
 '846' = "Francuska pisma"
 '847' = "Francuski humor i satira"
-'848' = "Francuski razni spisi"
+'848' = "Razni francuski spisi"
 '849' = "Okcitanski, katalonski, francusko-provansalski"
 '850' = "Talijanska, rumunjska i srodna literatura"
 '851' = "Talijanska poezija"
@@ -772,7 +772,7 @@
 '855' = "Talijanski govori"
 '856' = "Talijanska pisma"
 '857' = "Talijanski humor i satira"
-'858' = "Talijanski razni spisi"
+'858' = "Razni talijanski spisi"
 '859' = "Rumunjska i srodna literatura"
 '860' = "Španjolska i portugalska literatura"
 '861' = "Španjolska poezija"
@@ -782,7 +782,7 @@
 '865' = "Španjolski govori"
 '866' = "Španjolska pisma"
 '867' = "Španjolski humor i satira"
-'868' = "Španjolski razni spisi"
+'868' = "Razni španjolski spisi"
 '869' = "Portugalska i galicijska literatura"
 '870' = "Latinska i srodna italska literatura"
 '871' = "Latinska poezija"
@@ -792,7 +792,7 @@
 '875' = "Latinski govori"
 '876' = "Latinska pisma"
 '877' = "Latinski humor i satira"
-'878' = "Latinski razni spisi"
+'878' = "Razni latisniki spisi"
 '879' = "Literatura drugih italskih jezika"
 '880' = "Klasična grčka i helenska literatura"
 '881' = "Klasična grčka poezija"
@@ -802,7 +802,7 @@
 '885' = "Klasični grčki govori"
 '886' = "Klasična grčka pisma"
 '887' = "Klasični grčki humor i satira"
-'888' = "Klasični grčki razni spisi"
+'888' = "Razni klasični grčki spisi"
 '889' = "Moderna grčka literatura"
 '890' = "Literatura drugih jezika"
 '891' = "Istočna indoeuropska i keltska iteratura"
@@ -816,7 +816,7 @@
 '899' = "Austronezijska i druga literatura"
 '900' = "Povijest i zemljopis"
 '901' = "Filozofija i teorija povijesti"
-'902' = "Razna djela o povijesti"
+'902' = "Razna građa o povijesti"
 '903' = "Rječnici i enciklopedije"
 '904' = "Prikupljeni izvještaji o događajima"
 '905' = "Serijske publikacije o povijesti"
@@ -829,7 +829,7 @@
 '912' = "Karte i planovi površine zemlje"
 '913' = "Geografija i putovanja u antičkom svijetu"
 '914' = "Geografija i putovanja u Europi"
-'915' = "Geografija i putovanja po Aziji"
+'915' = "Geografija i putovanja u Aziji"
 '916' = "Geografija i putovanja u Africi"
 '917' = "Geografija i putovanja u Sjevernoj Americi"
 '918' = "Geografija i putovanja u Južnoj Americi"
