--- a/languages/HoldingStatus/bn.ini
+++ b/languages/HoldingStatus/bn.ini
@@ -1,3 +1,4 @@
+availability_uncertain = "অনিশ্চিত"
 copies_ordered_on_date = "%%copies%% কপি %%date%% তারিখে অর্ডার করা হয়েছে"
 copy_ordered_on_date = "1 কপি অর্ডার করা হয়েছে এই তারিখে %%date%%"
 service_available_presentation = "গ্রন্থাগারে ব্যবহারের জন্য সংরক্ষিত"
