Croatian translation improvements.

--- a/languages/CreatorRoles/hr.ini
+++ b/languages/CreatorRoles/hr.ini
@@ -267,9 +267,9 @@ präses = "Predsjednik"
 pta = "Podnositelj zahtjeva za patent"
 pte = "Podnositelj tužbe – okrivljenik"
 ptf = "Podnositelj tužbe"
-pth = "Nositelj patenta"
+pth = "Vlasnik patenta"
 ptt = "Podnositelj tužbe – žalitelj"
-pup = "Mjesto publicirnja"
+pup = "Mjesto publiciranja"
 rbr = "Rubrikator"
 rcd = "Tonski snimatelj"
 rce = "Inženjer zvuka"
@@ -281,7 +281,7 @@ red = "Urednik"
 regie = "Redatelj"
 ren = "Iscrtivač"
 reporter = "Reporter"
-res = "Istražitelj"
+res = "Istraživač"
 resp = "Optuženik žalbe"
 rev = "Recenzent"
 rpc = "Radio producent"
