--- a/languages/DDC23/hr.ini
+++ b/languages/DDC23/hr.ini
@@ -31,16 +31,16 @@
 '037' = "Opći enciklopedijski radovi na slavenskim jezicima"
 '038' = "Opći enciklopedijski radovi na skandinavskim jezicima"
 '039' = "Opći enciklopedijski radovi na drugim jezicima"
-'050' = "Opće serijske publikacije"
-'051' = "Opće serijske publikacije na američkom engleskom jeziku"
-'052' = "Opće serijske publikacije na engleskom jeziku"
-'053' = "Serijske publikacije na drugim germanskim jezicima"
-'054' = "Serije na francuskom, okcitanskom, katalonskom jeziku"
-'055' = "Serijske publikacije na talijanskom, rumunjskom i srodnim jezicima"
-'056' = "Serije na španjolskom, portugalskom, galicijskom jeziku"
-'057' = "Opće serijske publikacije na slavenskim jezicima"
-'058' = "Serijske publikacije na skandinavskim jezicima"
-'059' = "Opće serijske publikacije na drugim jezicima"
+'050' = "Opći serijali"
+'051' = "Opći serijali na američkom engleskom jeziku"
+'052' = "Opći serijali na engleskom jeziku"
+'053' = "Serijali na drugim germanskim jezicima"
+'054' = "Serijali na francuskom, okcitanskom, katalonskom jeziku"
+'055' = "Serijali na talijanskom, rumunjskom i srodnim jezicima"
+'056' = "Serijali na španjolskom, portugalskom, galicijskom jeziku"
+'057' = "Opći serijali na slavenskim jezicima"
+'058' = "Serijali na skandinavskim jezicima"
+'059' = "Opći serijali na drugim jezicima"
 '060' = "Opće organizacije i muzeologija"
 '061' = "Opće organizacije u Sjevernoj Americi"
 '062' = "Opće organizacije na Britanskim Otocima"
@@ -85,7 +85,7 @@
 '101' = "Teorija filozofije"
 '102' = "Razna građa o filozofiji"
 '103' = "Rječnici i enciklopedije"
-'105' = "Serijske publikacije filozofije"
+'105' = "Serijali o filozofiji"
 '106' = "Organizacije i menadžment"
 '107' = "Obrazovanje, istraživanje i srodne teme"
 '108' = "Grupe ljudi"
@@ -354,7 +354,7 @@
 '402' = "Razno"
 '403' = "Rječnici i enciklopedije"
 '404' = "Posebne teme jezika"
-'405' = "Serijske publikacije"
+'405' = "Serijali"
 '406' = "Organizacije i menadžment"
 '407' = "Obrazovanje, istraživanje, srodne teme"
 '408' = "Grupe ljudi"
@@ -438,7 +438,7 @@
 '501' = "Filozofija i teorija"
 '502' = "Razno"
 '503' = "Rječnici i enciklopedije"
-'505' = "Serijske publikacije"
+'505' = "Serijali"
 '506' = "Organizacije i menadžment"
 '507' = "Obrazovanje, istraživanje, srodne teme"
 '508' = "Prirodna povijest"
@@ -532,7 +532,7 @@
 '602' = "Razno"
 '603' = "Rječnici, enciklopedije, konkordancije"
 '604' = "Tehnički crtež, opasni materijali"
-'605' = "Serijske publikacije"
+'605' = "Serijali"
 '606' = "Organizacije"
 '607' = "Obrazovanje, istraživanje, srodne teme"
 '608' = "Patenti"
@@ -625,7 +625,7 @@
 '702' = "Razna građa o likovnoj i primjenjenoj umjetnosti"
 '703' = "Rječnici likovne i primjenjene umjetnosti"
 '704' = "Posebne teme iz likovne i primjenjene umjetnosti"
-'705' = "Serijske publikacije likovne i primjenjene umjetnosti"
+'705' = "Serijali likovne i primjenjene umjetnosti"
 '706' = "Organizacije i menadžment"
 '707' = "Obrazovanje, istraživanje i srodne teme"
 '708' = "Galerije, muzeji i privatne zbirke"
@@ -719,7 +719,7 @@
 '801' = "Filozofija i teorija"
 '802' = "Razno"
 '803' = "Rječnici i enciklopedije"
-'805' = "Serijske publikacije"
+'805' = "Serijali"
 '806' = "Organizacije i menadžment"
 '807' = "Obrazovanje, istraživanje, srodne teme"
 '808' = "Retorika i zbirke literature"
@@ -819,7 +819,7 @@
 '902' = "Razna građa o povijesti"
 '903' = "Rječnici i enciklopedije"
 '904' = "Prikupljeni izvještaji o događajima"
-'905' = "Serijske publikacije o povijesti"
+'905' = "Serijali o povijesti"
 '906' = "Organizacije i menadžment"
 '907' = "Obrazovanje, istraživanje i srodne teme"
 '908' = "Grupe ljudi"
