--- a/languages/de.ini
+++ b/languages/de.ini
@@ -1187,6 +1187,7 @@ See also = "Siehe auch"
 see_all_ellipsis = "Alle anzeigen …"
 Select this record = "Datensatz auswählen"
 Select your carrier = "Wählen Sie Ihren Telefonanbieter aus"
+select_all = "Alle Einträge auswählen"
 select_all_on_page = "Alle Einträge der Seite auswählen"
 select_item = "Titel für weitere Aktion auswählen"
 select_item_checked_out_renew = "Titel zum Verlängern auswählen"
