--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1208,6 +1208,7 @@ See also = "See also"
 see_all_ellipsis = "see all…"
 Select this record = "Select this record"
 Select your carrier = "Select your carrier"
+select_all = "Select all entries"
 select_all_on_page = "Select all entries on the page"
 select_item = "Select item for further action"
 select_item_checked_out_renew = "Select item for renewing"
