Finish Czech translation for 9.1.

--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -181,6 +181,7 @@ By Recent = "Nejnovější"
 By Region = "Podle oblasti"
 By Title = "Podle názvu"
 By Topic = "Podle tématu"
+cached_record_warning = "Tento záznam není k dispozici ve vyhledávacím indexu. Zobrazuje se poslední verze uložená v mezipaměti."
 Call Number = "Signatura"
 callnumber_abbrev = "Sign."
 Cannot find record = "Záznam nelze najít"
@@ -397,6 +398,8 @@ empty_search_disallowed = "Tento typ vyhledávání neumožňuje zadání prázd
 Enable Auto Config = "Zapnout automatickou konfiguraci"
 End Page = "Konec stránky"
 eol_ellipsis = "…"
+epf_recommendations = "Výsledky vyhledávání publikací"
+epf_recommendations_more = "Více výsledků vyhledávání publikací"
 ePub Full Text = "Plný text ve formátu ePub"
 Era = "Období"
 error_inconsistent_parameters = "Došlo k chybě. Byly detekovány protichůdné parametry."
@@ -754,7 +757,13 @@ load_tag_error = "Chyba: nelze zobrazit tagy"
 Loading = "Načítá se"
 loading_ellipsis = "Načítá se…"
 Loan History = "Historie výpůjček"
+loan_history_all_purged = "Vaše historie výpůjček byla vymazána"
+loan_history_confirm_purge_all = "Opravdu si přejete si vymazat všechny výpůjčky z Vaší historie?"
+loan_history_confirm_purge_selected = "Opravdu si přejete si vymazat vybrané výpůjčky z Vaší historie?"
 loan_history_empty = "Nemáte žádné výpůjčky."
+loan_history_purge_all = "Vymazat historii"
+loan_history_purge_selected = "Vymazat vybrané"
+loan_history_selected_purged = "Vybrané výpůjčky byly vymazány z Vaší historie."
 Local Login = "Místní přihlášení"
 local_login_desc = "Vložte přihlašovací údaje, pomocí kterých jste provedli registraci na těchto stránkách."
 Located = "Umístění"
@@ -1037,6 +1046,10 @@ pronounced = "výslovnost:"
 Provider = "Poskytovatel"
 proxied_user = "Požadavek předat uživateli"
 proxy_hold_place_success_html = 'Požadavek na předání rezervace byl úspěšný. <a href="%%url%%">Vaše rezervace a objednávky</a>.'
+proxy_list_by = "Tito uživatelé jsou Vašimi zástupci:"
+proxy_list_description = "Zástupci uživatele mají oprávnění provádět některé akce jeho jménem."
+proxy_list_for = "Jste zástupcem těchto uživatelů:"
+proxy_list_heading = "Zastupující uživatelé"
 Public = "Veřejný"
 public_list_indicator = "Veřejný"
 Publication = "Publikace"
@@ -1330,6 +1343,7 @@ tag_delete_warning = "Varování! Chystáte se smazat %count% tagů"
 tag_filter_empty = "Tomuto filtru neodpovídají žádné tagy."
 Tags = "Tagy"
 tags_deleted = "Počet odstraněných tagů: %count%"
+temporary_search_tab_title = "Vlastní vyhledávání"
 test_fail = "Neúspěšné"
 test_fix = "Opravit"
 test_ok = "OK"
